[package]
name = "rmc"
version = "1.1.1"
edition = "2021"
authors = ["Todd McIntire mail@toddmcintire.com"]
description = "a tool to move and copy files"
homepage = "https://github.com/toddmcintire/rmc"
repository = "https://github.com/toddmcintire/rmc"
keywords = ["cli", "copy", "move"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.4"
assert_cmd = "2.0.11"
file_diff = "1.0.0"